--- a/index.css
+++ b/index.css
@@ -111,6 +111,7 @@ input:focus{
     /* box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.05); */
 }
 
+/* Dark mode and Light mode */
 #toggle-theme{
     padding: 6px 15px;
     margin: 10px 0 0;
@@ -119,4 +120,12 @@ input:focus{
     border-radius: 4px;
     cursor: pointer;
     border: none;
+}
+
+#toggle-theme img {
+    width: 20px;
+    height: 20px;
+    margin-right: 8px;
+    vertical-align: middle;
+    transition: all 0.3s ease;
 }
